[gd_scene load_steps=20 format=3 uid="uid://baffyvu8l15kj"]

[ext_resource type="Script" uid="uid://dajhau3ak3yrs" path="res://Scenes/Stage/Game Scene/GameScene.gd" id="1_sv04b"]
[ext_resource type="AudioStream" uid="uid://bxwr5etj3xite" path="res://Music/In Game Music Survival Time.ogg" id="2_7emg0"]
[ext_resource type="PackedScene" uid="uid://cyu7mqfll4rh7" path="res://Scenes/Player/player.tscn" id="2_25205"]
[ext_resource type="PackedScene" uid="uid://kk15sx7k0m2t" path="res://Scenes/Stage/Game Scene/Managers/Spawn Manager/spawn_manager.tscn" id="2_rlq2x"]
[ext_resource type="Script" uid="uid://bqguc4lmxea1i" path="res://Addon/Global Timer/global_timer.gd" id="3_gqxi6"]
[ext_resource type="Environment" uid="uid://b4now75hmvnx6" path="res://Resources/Environment/game_scene.tres" id="4_rlq2x"]
[ext_resource type="Script" uid="uid://c3j3t48r1gdtc" path="res://Scenes/Stage/Game Scene/game_over_container.gd" id="6_k1sm0"]
[ext_resource type="Script" uid="uid://cl73svtvuf57f" path="res://Scenes/Stage/Game Scene/pause_menu.gd" id="8_fpsds"]
[ext_resource type="Texture2D" uid="uid://ca26i7pesocwv" path="res://Sprites/Background Game-Sheet.png" id="9_7emg0"]
[ext_resource type="PackedScene" uid="uid://whwc31fcqlo8" path="res://Scenes/Stage/Options Menu/options_menu.tscn" id="9_cvyba"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uysir"]
atlas = ExtResource("9_7emg0")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3p62"]
atlas = ExtResource("9_7emg0")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_00sk1"]
atlas = ExtResource("9_7emg0")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j1ws"]
atlas = ExtResource("9_7emg0")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6yhy"]
atlas = ExtResource("9_7emg0")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbg1e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uysir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3p62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00sk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j1ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6yhy")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cvyba"]
bg_color = Color(0.11372549, 0.11372549, 0.11372549, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uysir"]
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 0.5176471)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7emg0"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="GameScene" type="Node2D"]
script = ExtResource("1_sv04b")
music = ExtResource("2_7emg0")
frequency = 3.0

[node name="AnimatedBackground" type="AnimatedSprite2D" parent="."]
z_index = -100
sprite_frames = SubResource("SpriteFrames_wbg1e")
autoplay = "default"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TimeToEndGame" type="Node" parent="."]
script = ExtResource("3_gqxi6")
wait_time = 300.0
autoplay = true
metadata/_custom_type_script = "uid://bqguc4lmxea1i"

[node name="SpawnManager" parent="." instance=ExtResource("2_rlq2x")]

[node name="Player" parent="." instance=ExtResource("2_25205")]
acceleration_speed = 0.1
shoot_distance_vision = 500.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4_rlq2x")

[node name="TimeCountText" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_top = -530.0
offset_right = 183.0
offset_bottom = -442.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "Time : 10.00"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverContainer" type="VBoxContainer" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 128
alignment = 1
script = ExtResource("6_k1sm0")

[node name="TotalCurrencyText" type="RichTextLabel" parent="CanvasLayer/GameOverContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
theme_override_font_sizes/bold_italics_font_size = 64
theme_override_font_sizes/italics_font_size = 64
theme_override_font_sizes/mono_font_size = 64
bbcode_enabled = true
text = "Total: 0"
fit_content = true
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../BackToMainMenuButton")
focus_neighbor_bottom = NodePath("../BackToUpgradesButton")
focus_next = NodePath("../BackToUpgradesButton")
focus_previous = NodePath("../BackToMainMenuButton")
theme_override_font_sizes/font_size = 64
text = "Retry"

[node name="BackToUpgradesButton" type="Button" parent="CanvasLayer/GameOverContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../RetryButton")
focus_neighbor_bottom = NodePath("../BackToMainMenuButton")
focus_next = NodePath("../BackToMainMenuButton")
focus_previous = NodePath("../RetryButton")
theme_override_font_sizes/font_size = 64
text = "Upgrades"

[node name="BackToMainMenuButton" type="Button" parent="CanvasLayer/GameOverContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../BackToUpgradesButton")
focus_neighbor_bottom = NodePath("../RetryButton")
focus_next = NodePath("../RetryButton")
focus_previous = NodePath("../BackToUpgradesButton")
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="PauseMenu" type="VBoxContainer" parent="CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1
script = ExtResource("8_fpsds")

[node name="GamePausedText" type="RichTextLabel" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
theme_override_font_sizes/bold_italics_font_size = 64
theme_override_font_sizes/italics_font_size = 6
theme_override_font_sizes/mono_font_size = 4
bbcode_enabled = true
text = "Game Paused"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_cvyba")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uysir")
theme_override_styles/focus = SubResource("StyleBoxFlat_7emg0")
text = "Continue"

[node name="SettingsButton" type="Button" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_cvyba")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uysir")
theme_override_styles/focus = SubResource("StyleBoxFlat_7emg0")
text = "Settings"

[node name="BackToUpgradeButton" type="Button" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_cvyba")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uysir")
theme_override_styles/focus = SubResource("StyleBoxFlat_7emg0")
text = "Back to Upgrade"

[node name="BackToMainMenu" type="Button" parent="CanvasLayer/PauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_cvyba")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uysir")
theme_override_styles/focus = SubResource("StyleBoxFlat_7emg0")
text = "Back to Main Menu"

[node name="OptionsMenu" parent="CanvasLayer" node_paths=PackedStringArray("return_focus_control") instance=ExtResource("9_cvyba")]
return_focus_control = NodePath("../PauseMenu/SettingsButton")
